##############################################################################
# \file  CMakeLists.txt
# \brief CMakeLists.txt file of SBIA Boost prerequisite libraries.
#
# Copyright (c) 2011 University of Pennsylvania. All rights reserved.
# See LICENSE or Copyright file in project root directory for details.
#
# Contact: SBIA Group <sbia-software -at- uphs.upenn.edu>
##############################################################################

add_subdirectory (program_options)

