##############################################################################
# \file  CMakeLists.txt
# \brief CMakeLists.txt file of source code directory.
#
# Copyright (c) 2011 University of Pennsylvania. All rights reserved.
# See LICENSE file in project root or 'doc' directory for details.
#
# Contact: SBIA Group <sbia-software -at- uphs.upenn.edu>
##############################################################################

add_subdirectory (cmake)

basis_add_script (createproject.sh)

